spice-channel:  Read all available data from SASL buffer

When SASL is in use, its buffer may contain remaining data from previously
received messages. The spice_channel_iterate_read should use it, even if c->in
socket is not readable.

Fixes: https://gitlab.freedesktop.org/spice/spice-gtk/-/issues/126

Acked-by: Frediano Ziglio <fziglio@redhat.com>